# CAMI-Desktop

./: .gitignore  forge.config.js  package-lock.json  package.json  tailwind.config.js  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
.github/workflows/: build.yml  runner.yml
Plugins/: GoLPlugin.exp  GoLPlugin.lib  GoLPlugin.node  LeniaPlugin.exp  LeniaPlugin.lib  LeniaPlugin.node  addon.node  addon2.node
Visuals/: base.html  plugin.js  try.js  visuals.json  webview_preload.js
Visuals/ea5d5dd5-b48d-4898-9a07-dab38be1e1c/: GameOfLife.js
assets/data/: fakeData.jsx  fakeSimulation.jsx
src/: App.jsx  index.css  index.html  index.jsx  main.js  plugins_handling.js  preload.js  renderer.js  visual_handling.js  worker.js
src/algorithms/: GameOfLifeAddon.exp  GameOfLifeAddon.lib  GameOfLifeAddon.node
src/classes/: Cell.jsx  RangeCell.jsx
src/communication/: CMakeLists.txt
src/communication/include/: WrapperInit.hh
src/communication/src/: init.cpp
src/communication_test/: CMakeLists.txt
src/communication_test/include/: test.hh
src/communication_test/src/: plugin_impl.cpp
src/components/2DDisplay/: 2DDisplay.jsx
src/components/AlgorithmCard/: AlgorithmCard.css  AlgorithmCard.jsx
src/components/Comment/: Comment.jsx
src/components/HorizontalScroll/: HorizontalScroll.jsx
src/components/Informations/: Informations.jsx
src/components/Navbar/: Navbar.css  Navbar.jsx
src/components/SettingBar/: SettingBar.jsx
src/components/SimulationPlayer/: SimulationPlayer.jsx
src/components/SimulationPreview/: SimulationPreview.jsx
src/components/SimulationPreviewPlaceholder/: SimulationPreviewPlaceholder.jsx
src/components/SimulationResume/: SimulationResume.jsx
src/components/Swipe/: Swipe.jsx
src/components/Tags/: Chip.jsx
src/components/Taskbar/: Taskbar.jsx
src/components/VisualSelector/: VisualSelector.jsx
src/contexts/: APIContext.jsx  NavigateBackContext.jsx  SimulationContext.jsx  UserContext.jsx
src/pages/: VisualLoader.jsx
src/pages/Admin/: AdminAlgorithm.jsx  AdminComment.jsx  AdminPage.jsx  AdminUser.jsx  AdminVisual.jsx
src/pages/Community/: Community.jsx
src/pages/Connection/: Connection.jsx
src/pages/Home/: Home.jsx  Playground.jsx
src/pages/NotFound/: NotFound.jsx
src/pages/Playground/: Playground.jsx
src/pages/Settings/: Settings.jsx
src/pages/SimulationInformation/: SimulationInformation.jsx
src/pages/Submission/: AlgorithmSubmission.jsx  SelectSubmission.jsx  Submission.jsx  TryVisual.jsx  VisualSubmission.jsx
src/utils/: ColorConverter.jsx  Themes.jsx
